Fixed cors issue; added username to post response